Fix margin spacing on buttons

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
   width: 600px;
   display: grid;
   grid-template-columns: auto auto auto;
+  margin: 16px;
 }
 
 .button {
